fixed cart icon clipped on mobile issue

--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -57,3 +57,10 @@
     transform: scale(1);
   }
 }
+
+@media (max-width: 400px) {
+  .button {
+    padding: 0.75rem 2rem;
+    margin-left: 2%;
+  }
+}
